media-gfx/imagemagick: Bump v.7.1.1.15+1

--- a/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
+++ b/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
@@ -1,5 +1,5 @@
 name: imagemagick
-version: 7.1.1.15
+version: 7.1.1.15+1
 category: media-gfx
 use_flags:
 - -fftw
@@ -32,6 +32,8 @@ use_flags:
 - xml
 - zip
 - zlib
+- video_cards_nvidia
+- video_cards_r600
 requires:
 - name: xz-utils
   version: '>=0'
@@ -76,6 +78,9 @@ requires:
   version: '>=0'
   category: virtual
 - name: libXext
+  version: '>=0'
+  category: x11-libs
+- name: libXt
   version: '>=0'
   category: x11-libs
 annotations:
