media-gfx/imagemagick: Bump v.7.1.1.15+2

--- a/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
+++ b/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
@@ -1,5 +1,5 @@
 name: imagemagick
-version: 7.1.1.15+1
+version: 7.1.1.15+2
 category: media-gfx
 use_flags:
 - -fftw
@@ -34,6 +34,9 @@ use_flags:
 - zlib
 - video_cards_nvidia
 - video_cards_r600
+- wayland
+- q32
+- q8
 requires:
 - name: xz-utils
   version: '>=0'
