x11-libs/xapps: Bump v.2.0.4+1

--- a/packages/atoms/base-gnome4/x11-libs/xapps/definition.yaml
+++ b/packages/atoms/base-gnome4/x11-libs/xapps/definition.yaml
@@ -1,5 +1,5 @@
 name: xapps
-version: 2.0.4
+version: 2.0.4+1
 category: x11-libs
 use_flags:
 - -gtk-doc
@@ -7,6 +7,7 @@ use_flags:
 - -python_targets_python3_7
 - -python_targets_python3_8
 - python_targets_python3_9
+- introspection
 requires:
 - name: libdbusmenu
   version: '>=0'
