media-libs-2.0/libmediaart: Bump v.1.9.6

--- a/packages/atoms/base-gnome4/media-libs-2.0/libmediaart/definition.yaml
+++ b/packages/atoms/base-gnome4/media-libs-2.0/libmediaart/definition.yaml
@@ -1,19 +1,16 @@
 name: libmediaart
-version: 1.9.4
+version: 1.9.6
 category: media-libs-2.0
 use_flags:
 - -test
+- -qt5
 - introspection
 - prefix
-- qt5
 - vala
 requires:
 - name: gobject-introspection
   version: '>=0'
   category: dev-libs
-- name: qtgui
-  version: '>=0'
-  category: dev-qt-5
 annotations:
   subsets:
     rules:
@@ -42,4 +39,4 @@ labels:
   kit: gnome-kit
   original.package.name: media-libs/libmediaart
   original.package.slot: "2.0"
-  original.package.version: 1.9.4
+  original.package.version: 1.9.6-r1
