--- a/packages/atoms/base-gnome4/media-libs-2.0/libmediaart/build.yaml
+++ b/packages/atoms/base-gnome4/media-libs-2.0/libmediaart/build.yaml
@@ -1,4 +1,10 @@
 prelude:
+# Temporary. To move on funtoo-kits
+- >-
+  cp *.ebuild /var/git/meta-repo/kits/gnome-kit/media-libs/libmediaart &&
+  cd /var/git/meta-repo/kits/gnome-kit/media-libs/libmediaart &&
+  ebuild libmediaart-1.9.6-r1.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
