net-misc/rygel: Bump v.0.40.4

--- a/packages/atoms/base-gnome4/net-misc/rygel/build.yaml
+++ b/packages/atoms/base-gnome4/net-misc/rygel/build.yaml
@@ -1,4 +1,10 @@
 prelude:
+# Temporary (to add on funtoo-kits)
+- >-
+  cp *.ebuild /var/git/meta-repo/kits/gnome-kit/net-misc/rygel &&
+  cd /var/git/meta-repo/kits/gnome-kit/net-misc/rygel &&
+  ebuild rygel-0.40.4.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
