base-gnome4: Update build order

--- a/packages/atoms/base-gnome4/gui-libs-4/tepl/build.yaml
+++ b/packages/atoms/base-gnome4/gui-libs-4/tepl/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gtksourceview
+- name: folks
   version: '>=0'
-  category: x11-libs-4
+  category: dev-libs
