--- a/packages/atoms/base-gnome4/dev-python/dbusmock/build.yaml
+++ b/packages/atoms/base-gnome4/dev-python/dbusmock/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race15
+- name: gtksourceview
   version: '>=0'
-  category: seed
+  category: x11-libs-4
