--- a/packages/atoms/base-gnome4/dev-libs/libpeas/build.yaml
+++ b/packages/atoms/base-gnome4/dev-libs/libpeas/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: tepl
+- name: macaroni-funtoo-race15
   version: '>=0'
-  category: gui-libs-4
+  category: seed
