--- a/packages/atoms/base-gnome4/mail-client/geary/build.yaml
+++ b/packages/atoms/base-gnome4/mail-client/geary/build.yaml
@@ -1,7 +1,11 @@
 prelude:
-# Temporary until next race
+# Temporary upgrade packages until next race.
+# The patch is needed to fix compilation with vala-0.54 and will
+# be added on funtoo-kits.
 - >-
-  luet repo update && luet upgrade -y && luet cleanup
+  luet repo update && luet upgrade -y && luet cleanup &&
+  mkdir -p /etc/portage/patches/mail-client/geary/ &&
+  cp -vf *.patch /etc/portage/patches/mail-client/geary/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
