--- a/packages/atoms/base-gnome4/mail-client/geary/finalize.yaml
+++ b/packages/atoms/base-gnome4/mail-client/geary/finalize.yaml
@@ -4,3 +4,6 @@ shell:
 install:
 - source /etc/profile && macaronictl env-update && whip hook gtk.mime_update_db &&
   whip hook gtk.glib_update_schemas && whip hook gtk.gtk_update_icons
+uninstall:
+- source /etc/profile && macaronictl env-update && whip hook gtk.mime_update_db &&
+  whip hook gtk.glib_update_schemas && whip hook gtk.gtk_update_icons
