base-gnome4: Review build order

--- a/packages/atoms/base-gnome4/dev-libs/folks/build.yaml
+++ b/packages/atoms/base-gnome4/dev-libs/folks/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: dbusmock
+- name: ytnef
   version: '>=0'
-  category: dev-python
+  category: net-mail
