mail-client/geaary: Avoid copy patches of other packages

--- a/packages/atoms/base-gnome4/mail-client/geary/build.yaml
+++ b/packages/atoms/base-gnome4/mail-client/geary/build.yaml
@@ -5,7 +5,7 @@ prelude:
 - >-
   luet repo update && luet upgrade -y && luet cleanup &&
   mkdir -p /etc/portage/patches/mail-client/geary/ &&
-  cp -vf *.patch /etc/portage/patches/mail-client/geary/
+  cp -vf geary_*.patch /etc/portage/patches/mail-client/geary/
 
 
 - |-
