net-misc/rygel: Bump v.0.40.4+1

--- a/packages/atoms/base-gnome4/net-misc/rygel/build.yaml
+++ b/packages/atoms/base-gnome4/net-misc/rygel/build.yaml
@@ -1,7 +1,7 @@
 prelude:
 # Temporary (to add on funtoo-kits)
 - >-
-  cp *.ebuild /var/git/meta-repo/kits/gnome-kit/net-misc/rygel &&
+  cp rygel*.ebuild /var/git/meta-repo/kits/gnome-kit/net-misc/rygel &&
   cd /var/git/meta-repo/kits/gnome-kit/net-misc/rygel &&
   ebuild rygel-0.40.4.ebuild digest &&
   cd -
