net-misc/rygel: Update bdep

--- a/packages/atoms/base-gnome4/net-misc/rygel/build.yaml
+++ b/packages/atoms/base-gnome4/net-misc/rygel/build.yaml
@@ -30,6 +30,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gst-plugins-twolame
+- name: gstreamer-editing-services
   version: '>=0'
-  category: media-plugins-1.0
+  category: media-libs-1.0
