net-misc/rygel: Bump v.0.40.4+2

--- a/packages/atoms/base-gnome4/net-misc/rygel/definition.yaml
+++ b/packages/atoms/base-gnome4/net-misc/rygel/definition.yaml
@@ -1,5 +1,5 @@
 name: rygel
-version: 0.40.4+1
+version: 0.40.4+2
 category: net-misc
 use_flags:
 - -tracker
@@ -44,6 +44,9 @@ requires:
 - name: gdk-pixbuf
   version: '>=0'
   category: x11-libs-2
+- name: gstreamer-editing-services
+  version: '>=0'
+  category: media-libs-1.0
 annotations:
   subsets:
     rules:
