toolchain/base-gnome4: Update rdeps

--- a/packages/toolchain/base-gnome4/definition.yaml
+++ b/packages/toolchain/base-gnome4/definition.yaml
@@ -105,6 +105,9 @@ requires:
   - name: potrace
     category: media-gfx
     version: '>=0'
+  - name: gstreamer-editing-services
+    category: media-libs-1.0
+    version: '>=0'
   - name: gupnp-dlna
     category: media-libs-2.0
     version: '>=0'
