--- a/packages/atoms/base-gnome4/net-libs-1.2/gupnp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs-1.2/gupnp/definition.yaml
@@ -1,5 +1,5 @@
 name: gupnp
-version: 1.2.4+1
+version: 1.2.4+2
 category: net-libs-1.2
 use_flags:
 - -connman
@@ -9,6 +9,7 @@ use_flags:
 - introspection
 - networkmanager
 - python_targets_python3_9
+- vala
 requires:
 - name: gssdp
   version: '>=0'
