net-libs/gupnp: Bump v.1.0.3+5

--- a/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs/gupnp/definition.yaml
@@ -1,5 +1,5 @@
 name: gupnp
-version: 1.0.3+4
+version: 1.0.3+5
 category: net-libs
 use_flags:
 - -connman
@@ -10,6 +10,7 @@ use_flags:
 - introspection
 - networkmanager
 - python_single_target_python3_9
+- vala
 requires:
 - name: gssdp
   version: '>=0'
