net-libs-1.2/gssdp: Bump v.1.2.3+2

--- a/packages/atoms/base-gnome4/net-libs-1.2/gssdp/definition.yaml
+++ b/packages/atoms/base-gnome4/net-libs-1.2/gssdp/definition.yaml
@@ -1,9 +1,10 @@
 name: gssdp
-version: 1.2.3+1
+version: 1.2.3+2
 category: net-libs-1.2
 use_flags:
 - gtk
 - introspection
+- vala
 requires:
 - name: libsoup
   version: '>=0'
