media-gfx/imagemagick: Add missing rdeps

--- a/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
+++ b/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
@@ -86,6 +86,9 @@ requires:
 - name: libXt
   version: '>=0'
   category: x11-libs
+- name: libraqm
+  version: '>=0'
+  category: media-libs
 annotations:
   subsets:
     rules:
