portage-converter/base-xorg: Add finalize for llvm13

--- a/portage-converter/base-xorg.yml
+++ b/portage-converter/base-xorg.yml
@@ -153,6 +153,23 @@ artefacts:
     - xml
   packages:
   - sys-devel/llvm:13
+  finalizer:
+    shell:
+      - "/bin/bash"
+      - "-c"
+    install:
+      - |
+        export EROOT=${EROOT:-/} ; \
+        mkdir -p ${EROOT}etc/ld.so.conf.d || true ; \
+        echo "
+        /usr/lib/llvm/13/lib
+        /usr/lib/llvm/13/lib64
+        " > ${EROOT}etc/ld.so.conf.d/06-llvm13.conf
+      - eval 'macaronictl env-update || true'
+    uninstall:
+      - >-
+        export EROOT=${EROOT:-/} ;
+        rm -f ${EROOT}etc/ld.so.conf.d/06-llvm13.conf
 
 - tree: packages/atoms/base-xorg
   mutations:
