portage-converter/base-net: gmime need vala for geary

--- a/portage-converter/base-net.yml
+++ b/portage-converter/base-net.yml
@@ -126,8 +126,9 @@ artefacts:
     - sh
     - static-libs
     - test
-    - vala
     enabled:
+    # Needed for geary
+    - vala
     - crypt
   packages:
   - dev-libs/gmime:3.0
