--- a/packages/atoms/xorg-base/x11-base/xorg-server/definition.yaml
+++ b/packages/atoms/xorg-base/x11-base/xorg-server/definition.yaml
@@ -1,5 +1,5 @@
 name: xorg-server
-version: 1.20.10+1
+version: 1.20.10+2
 category: x11-base
 use_flags:
 - -dmx
@@ -15,6 +15,7 @@ use_flags:
 - wayland
 - xephyr
 - xnest
+- suid
 requires:
 - name: openssl
   version: '>=0'
