virtual/gsasl: Update build.yaml

--- a/packages/atoms/tools/virtual/gsasl/build.yaml
+++ b/packages/atoms/tools/virtual/gsasl/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: postgresql
+- name: macaroni-funtoo-race15
   version: '>=0'
-  category: dev-db-15
+  category: seed
