net-mail/mailutils: added ldap use flag

--- a/packages/atoms/tools/net-mail/mailutils/definition.yaml
+++ b/packages/atoms/tools/net-mail/mailutils/definition.yaml
@@ -1,5 +1,5 @@
 name: mailutils
-version: "3.10"
+version: 3.10+1
 category: net-mail
 use_flags:
 - -emacs
@@ -24,6 +24,7 @@ use_flags:
 - servers
 - ssl
 - tcpd
+- ldap
 requires:
 - name: mysql-connector-c
   version: '>=0'
