--- a/packages/atoms/tools/net-mail/mailutils/build.yaml
+++ b/packages/atoms/tools/net-mail/mailutils/build.yaml
@@ -1,4 +1,9 @@
 prelude:
+# Add new ebuild with patch
+- >-
+  cp mailutils-3.16.ebuild /var/git/meta-repo/kits/net-kit/net-mail/mailutils &&
+  ebuild mailutils-3.16.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
