--- a/packages/atoms/tools/net-mail/mailutils/definition.yaml
+++ b/packages/atoms/tools/net-mail/mailutils/definition.yaml
@@ -1,5 +1,5 @@
 name: mailutils
-version: 3.10+1
+version: "3.16"
 category: net-mail
 use_flags:
 - -emacs
@@ -106,4 +106,4 @@ labels:
   kit: net-kit
   original.package.name: net-mail/mailutils
   original.package.slot: "0"
-  original.package.version: "3.10"
+  original.package.version: "3.16"
