net-mail/mailutils: Bump v.3.16+1

--- a/packages/atoms/tools/net-mail/mailutils/build.yaml
+++ b/packages/atoms/tools/net-mail/mailutils/build.yaml
@@ -2,6 +2,7 @@ prelude:
 # Add new ebuild with patch
 - >-
   cp mailutils-3.16.ebuild /var/git/meta-repo/kits/net-kit/net-mail/mailutils &&
+  cd /var/git/meta-repo/kits/net-kit/net-mail/mailutils/ &&
   ebuild mailutils-3.16.ebuild digest &&
   cd -
 - |-
