--- a/packages/atoms/tools/net-mail/mailutils/build.yaml
+++ b/packages/atoms/tools/net-mail/mailutils/build.yaml
@@ -5,6 +5,11 @@ prelude:
   cd /var/git/meta-repo/kits/net-kit/net-mail/mailutils/ &&
   ebuild mailutils-3.16.ebuild digest &&
   cd -
+# I need investigate on this
+- >-
+  export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" &&
+  export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} &&
+  emerge guile -j
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
