x11-drivers/nvidia-drivers: Bump v.525.85.05+1

--- a/packages/atoms/nvidia/x11-drivers/nvidia-drivers/definition.yaml
+++ b/packages/atoms/nvidia/x11-drivers/nvidia-drivers/definition.yaml
@@ -1,5 +1,5 @@
 name: nvidia-drivers
-version: 525.85.05
+version: 525.85.05+1
 category: x11-drivers
 use_flags:
 - X
@@ -8,6 +8,8 @@ use_flags:
 - kernel_linux
 - opencl
 - wayland
+- static-libs
+- acpi
 requires:
 - name: pax-utils
   version: '>=0'
