toolchain/base-gnome4: Update rdeps

--- a/packages/toolchain/base-gnome4/definition.yaml
+++ b/packages/toolchain/base-gnome4/definition.yaml
@@ -15,6 +15,9 @@ requires:
   - name: eselect-lapack
     category: app-eselect
     version: '>=0'
+  - name: tracker-miners
+    category: app-misc
+    version: '>=0'
   - name: djvu
     category: app-text
     version: '>=0'
@@ -171,6 +174,9 @@ requires:
   - name: gupnp-av
     category: net-libs
     version: '>=0'
+  - name: libgrss
+    category: net-libs
+    version: '>=0'
   - name: ytnef
     category: net-mail
     version: '>=0'
@@ -200,6 +206,15 @@ requires:
     version: '>=0'
   - name: gnome-disk-utility
     category: sys-apps
+    version: '>=0'
+  - name: osinfo-db
+    category: sys-apps
+    version: '>=0'
+  - name: osinfo-db-tools
+    category: sys-apps
+    version: '>=0'
+  - name: libosinfo
+    category: sys-libs
     version: '>=0'
   - name: cblas
     category: virtual
