--- a/packages/atoms/tools/app-antivirus/lkrg/build.yaml
+++ b/packages/atoms/tools/app-antivirus/lkrg/build.yaml
@@ -1,8 +1,11 @@
 prelude:
 
 - >-
-  export kver=$(luet s kernel-5.10/macaroni-lts-full -o json | jq .stones[0].labels.\"package.version\" -r) &&
-  cd /lib/modules/${kver}-macaroni && ln -s /usr/src/linux-${kver}-macaroni build
+  luet repo update &&
+  luet i kernel-5.10/macaroni-full --finalizer-env "BUILD_ISO=1" && luet cleanup
+  export kver=$(luet s kernel-5.10/macaroni-full -o json | jq .stones[0].labels.\"package.version\" -r) &&
+  cd /lib/modules/${kver}-macaroni && ln -s /usr/src/linux-${kver}-macaroni build &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
