--- a/packages/atoms/base-gnome4/media-sound/gnome-music/definition.yaml
+++ b/packages/atoms/base-gnome4/media-sound/gnome-music/definition.yaml
@@ -1,5 +1,5 @@
 name: gnome-music
-version: 3.36.6+3
+version: 3.36.7
 category: media-sound
 use_flags:
 - -python_single_target_python3_10
@@ -91,4 +91,4 @@ labels:
   kit: gnome-kit
   original.package.name: media-sound/gnome-music
   original.package.slot: "0"
-  original.package.version: 3.36.6
+  original.package.version: 3.36.7
