--- a/packages/atoms/tools/net-libs/libwebsockets/build.yaml
+++ b/packages/atoms/tools/net-libs/libwebsockets/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# TODO: Investigate on this. Build test tools has issues.
+- >-
+  cp libwebsockets-2.4.2.ebuild /var/git/meta-repo/kits/net-kit/net-libs/libwebsockets
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
