dev-util/strace: Bump v.6.4+1

--- a/packages/atoms/tools/dev-util/strace/definition.yaml
+++ b/packages/atoms/tools/dev-util/strace/definition.yaml
@@ -1,12 +1,12 @@
 name: strace
-version: "6.4"
+version: 6.4+1
 category: dev-util
 use_flags:
+- -unwind
 - aio
 - elfutils
 - perl
 - static
-- unwind
 requires:
 - name: perl
   version: '>=0'
