media-video/pipewire: Bump v.0.3.80

--- a/packages/atoms/base-multimedia2/media-video/pipewire/definition.yaml
+++ b/packages/atoms/base-multimedia2/media-video/pipewire/definition.yaml
@@ -1,5 +1,5 @@
 name: pipewire
-version: 0.3.77+1
+version: 0.3.80
 category: media-video
 use_flags:
 - -doc
@@ -104,4 +104,4 @@ labels:
   kit: gnome-kit
   original.package.name: media-video/pipewire
   original.package.slot: "0"
-  original.package.version: 0.3.77
+  original.package.version: 0.3.80
