--- a/packages/atoms/base-multimedia2/media-video/pipewire/build.yaml
+++ b/packages/atoms/base-multimedia2/media-video/pipewire/build.yaml
@@ -1,4 +1,11 @@
 prelude:
+# Temporary fix SEGFAULT of Gnome Control Center.
+# This package is autogen so will be fixed from Funtoo soon.
+- >-
+  cp pipewire-0.3.80.ebuild /var/git/meta-repo/kits/gnome-kit/media-video/pipewire/ &&
+  cd /var/git/meta-repo/kits/gnome-kit/media-video/pipewire/ &&
+  ebuild pipewire-0.3.80.ebuild digest &&
+  cd -
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
