toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -9,8 +9,32 @@ requires:
   - name: sudo
     category: app-admin
     version: '>=0'
+  - name: lkrg
+    category: app-antivirus
+    version: '>=0'
+  - name: dpkg
+    category: app-arch
+    version: '>=0'
+  - name: mkcert
+    category: app-misc
+    version: '>=0'
+  - name: mosquitto
+    category: app-misc
+    version: '>=0'
   - name: neofetch
     category: app-misc
+    version: '>=0'
+  - name: cJSON
+    category: dev-libs
+    version: '>=0'
+  - name: libparserutils
+    category: dev-libs
+    version: '>=0'
+  - name: debootstrap
+    category: dev-util
+    version: '>=0'
+  - name: strace
+    category: dev-util
     version: '>=0'
   - name: ascii-image-converter
     category: media-gfx
@@ -21,14 +45,32 @@ requires:
   - name: minicom
     category: net-dialup
     version: '>=0'
+  - name: c-ares
+    category: net-dns
+    version: '>=0'
   - name: libgsasl
+    category: net-libs
+    version: '>=0'
+  - name: libhubbub
     category: net-libs
     version: '>=0'
   - name: libntlm
     category: net-libs
     version: '>=0'
+  - name: libwebsockets
+    category: net-libs
+    version: '>=0'
   - name: mailutils
     category: net-mail
+    version: '>=0'
+  - name: stunnel
+    category: net-misc
+    version: '>=0'
+  - name: cpuid
+    category: sys-apps
+    version: '>=0'
+  - name: dmidecode
+    category: sys-apps
     version: '>=0'
   - name: hwloc
     category: sys-apps
@@ -41,6 +83,9 @@ requires:
     version: '>=0'
   - name: zram-init
     category: sys-block
+    version: '>=0'
+  - name: os-prober
+    category: sys-boot
     version: '>=0'
   - name: hibernate-script
     category: sys-power
