net-libs/wvstreams: Bump v.4.6.1+1

--- a/packages/atoms/tools/net-libs/wvstreams/build.yaml
+++ b/packages/atoms/tools/net-libs/wvstreams/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+# Temporary until fixed on funtoo-kits
+- >-
+  mkdir -p /etc/portage/patches/net-libs/wvstreams/ &&
+  cp -v patches/* /etc/portage/patches/net-libs/wvstreams/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
