toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -3,10 +3,19 @@ name: tools
 version: "1"
 description: "Virtul package to install portage meta data of the tools packages"
 requires:
+  - name: hddtemp
+    category: app-admin
+    version: '>=0'
+  - name: logrotate
+    category: app-admin
+    version: '>=0'
   - name: makepasswd
     category: app-admin
     version: '>=0'
   - name: sudo
+    category: app-admin
+    version: '>=0'
+  - name: sysstat
     category: app-admin
     version: '>=0'
   - name: lkrg
@@ -14,6 +23,33 @@ requires:
     version: '>=0'
   - name: dpkg
     category: app-arch
+    version: '>=0'
+  - name: rpm
+    category: app-arch
+    version: '>=0'
+  - name: upx-bin
+    category: app-arch
+    version: '>=0'
+  - name: zip
+    category: app-arch
+    version: '>=0'
+  - name: cdrdao
+    category: app-cdr
+    version: '>=0'
+  - name: dvd+rw-tools
+    category: app-cdr
+    version: '>=0'
+  - name: mhash
+    category: app-crypt
+    version: '>=0'
+  - name: hdapsd
+    category: app-laptop
+    version: '>=0'
+  - name: radeontool
+    category: app-laptop
+    version: '>=0'
+  - name: tp_smapi
+    category: app-laptop
     version: '>=0'
   - name: mkcert
     category: app-misc
@@ -24,10 +60,22 @@ requires:
   - name: neofetch
     category: app-misc
     version: '>=0'
+  - name: scrub
+    category: app-misc
+    version: '>=0'
+  - name: libdbi
+    category: dev-db
+    version: '>=0'
   - name: cJSON
     category: dev-libs
     version: '>=0'
+  - name: libnatspec
+    category: dev-libs
+    version: '>=0'
   - name: libparserutils
+    category: dev-libs
+    version: '>=0'
+  - name: userspace-rcu
     category: dev-libs
     version: '>=0'
   - name: debootstrap
@@ -39,14 +87,26 @@ requires:
   - name: ascii-image-converter
     category: media-gfx
     version: '>=0'
+  - name: libao
+    category: media-libs
+    version: '>=0'
+  - name: rrdtool
+    category: net-analyzer
+    version: '>=0'
   - name: lrzsz
     category: net-dialup
     version: '>=0'
   - name: minicom
     category: net-dialup
     version: '>=0'
+  - name: wvdial
+    category: net-dialup
+    version: '>=0'
   - name: c-ares
     category: net-dns
+    version: '>=0'
+  - name: nfs-utils
+    category: net-fs
     version: '>=0'
   - name: libgsasl
     category: net-libs
@@ -60,11 +120,23 @@ requires:
   - name: libwebsockets
     category: net-libs
     version: '>=0'
+  - name: wvstreams
+    category: net-libs
+    version: '>=0'
   - name: mailutils
     category: net-mail
     version: '>=0'
   - name: stunnel
     category: net-misc
+    version: '>=0'
+  - name: rpcbind
+    category: net-nds
+    version: '>=0'
+  - name: cntlm
+    category: net-proxy
+    version: '>=0'
+  - name: irda-utils
+    category: net-wireless
     version: '>=0'
   - name: cpuid
     category: sys-apps
@@ -72,20 +144,35 @@ requires:
   - name: dmidecode
     category: sys-apps
     version: '>=0'
+  - name: dtc
+    category: sys-apps
+    version: '>=0'
   - name: hwloc
+    category: sys-apps
+    version: '>=0'
+  - name: lm_sensors
     category: sys-apps
     version: '>=0'
   - name: lshw
     category: sys-apps
     version: '>=0'
+  - name: setserial
+    category: sys-apps
+    version: '>=0'
   - name: smartmontools
     category: sys-apps
+    version: '>=0'
+  - name: nss-mdns
+    category: sys-auth
     version: '>=0'
   - name: zram-init
     category: sys-block
     version: '>=0'
   - name: os-prober
     category: sys-boot
+    version: '>=0'
+  - name: multipath-tools
+    category: sys-fs
     version: '>=0'
   - name: hibernate-script
     category: sys-power
