toolchain/base-latex2: Bump v1

--- a/packages/toolchain/base-latex2/definition.yaml
+++ b/packages/toolchain/base-latex2/definition.yaml
@@ -1,6 +1,6 @@
 category: toolchain
-name: base-latex
-version: "2"
+name: base-late2
+version: "1"
 description: "Virtul package to install portage meta data of the base-latex2 packages"
 requires:
   - name: texlive-langcyrillic
