portage-converter/base-multimedia2: pipewire[-pipewire-alsa]

--- a/portage-converter/base-multimedia2.yaml
+++ b/portage-converter/base-multimedia2.yaml
@@ -210,6 +210,8 @@ artefacts:
       - echo-cancel
       - extra
       - systemd
+      # Conflicts with alsa-plugins[pulseaudio]
+      - pipewire-alsa
   packages:
     - media-video/pipewire
 
