portage-converter/xorg-base: Update specs

--- a/portage-converter/xorg-base.yml
+++ b/portage-converter/xorg-base.yml
@@ -170,6 +170,7 @@ artefacts:
   - x11-drivers/xf86-video-nouveau
   - x11-drivers/xf86-video-vmware
 
+  - x11-drivers/xf86-video-dummy
 
   - x11-misc/xdg-user-dirs-gtk
   - x11-misc/xdg-user-dirs:0
@@ -229,6 +230,7 @@ artefacts:
   mutations:
     uses:
       - xnest
+      - suid
   uses:
     disabled:
     - debug
