--- a/portage-converter/base-qt2.yaml
+++ b/portage-converter/base-qt2.yaml
@@ -174,6 +174,15 @@ artefacts:
   packages:
     - dev-python/PyQt5
 
+- tree: packages/atoms/base-qt2
+  uses:
+    disabled:
+      - debug
+      - test
+  packages:
+    - dev-qt/qtvirtualkeyboard:5
+
+
 include_layers:
 - layers/macaroni-funtoo-race12.yaml
 
