toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -126,6 +126,9 @@ requires:
   - name: mailutils
     category: net-mail
     version: '>=0'
+  - name: ipcalc
+    category: net-misc
+    version: '>=0'
   - name: stunnel
     category: net-misc
     version: '>=0'
