toolchain/xorg-base: Update rdeps

--- a/packages/toolchain/xorg-base/definition.yaml
+++ b/packages/toolchain/xorg-base/definition.yaml
@@ -222,6 +222,9 @@ requires:
   - name: xf86-video-ati
     category: x11-drivers
     version: '>=0'
+  - name: xf86-video-dummy
+    category: x11-drivers
+    version: '>=0'
   - name: xf86-video-fbdev
     category: x11-drivers
     version: '>=0'
