--- a/packages/atoms/base-tools/net-libs/libtirpc/definition.yaml
+++ b/packages/atoms/base-tools/net-libs/libtirpc/definition.yaml
@@ -1,9 +1,13 @@
 name: libtirpc
-version: 1.3.1
+version: 1.3.1+1
 category: net-libs
 use_flags:
 - -elibc_musl
-- -kerberos
+- kerberos
+requires:
+- name: krb5
+  version: '>=0'
+  category: virtual
 annotations:
   subsets:
     rules:
