--- a/packages/atoms/tools/net-wireless/irda-utils/build.yaml
+++ b/packages/atoms/tools/net-wireless/irda-utils/build.yaml
@@ -1,4 +1,9 @@
 prelude:
+# Temporary until will be fixed on funtoo-kits
+- >-
+  cp irda-utils-0.9.18-r6.ebuild /var/git/meta-repo/kits/net-kit/net-wireless/irda-utils &&
+  mkdir -p /etc/portage/patches/net-wireless/irda-utils &&
+  cp irdadump.patch /etc/portage/patches/net-wireless/irda-utils/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
