toolchain/base-latex2: Fix typo

--- a/packages/toolchain/base-latex2/definition.yaml
+++ b/packages/toolchain/base-latex2/definition.yaml
@@ -1,5 +1,5 @@
 category: toolchain
-name: base-late2
+name: base-latex2
 version: "1"
 description: "Virtul package to install portage meta data of the base-latex2 packages"
 requires:
