toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -78,7 +78,13 @@ requires:
   - name: userspace-rcu
     category: dev-libs
     version: '>=0'
+  - name: byacc
+    category: dev-util
+    version: '>=0'
   - name: debootstrap
+    category: dev-util
+    version: '>=0'
+  - name: kbuild
     category: dev-util
     version: '>=0'
   - name: strace
@@ -127,6 +133,9 @@ requires:
     category: net-mail
     version: '>=0'
   - name: ipcalc
+    category: net-misc
+    version: '>=0'
+  - name: olsrd
     category: net-misc
     version: '>=0'
   - name: stunnel
@@ -179,6 +188,9 @@ requires:
     version: '>=0'
   - name: hibernate-script
     category: sys-power
+    version: '>=0'
+  - name: htop
+    category: sys-process
     version: '>=0'
   - name: iotop
     category: sys-process
