toolchain/base-qt2: Update rdeps

--- a/packages/toolchain/base-qt2/definition.yaml
+++ b/packages/toolchain/base-qt2/definition.yaml
@@ -33,6 +33,9 @@ requires:
   - name: qtmultimedia
     category: dev-qt-5
     version: '>=0'
+  - name: qtvirtualkeyboard
+    category: dev-qt-5
+    version: '>=0'
   - name: qtwebengine
     category: dev-qt-5
     version: '>=0'
@@ -41,6 +44,9 @@ requires:
     version: '>=0'
   - name: qtwebsockets
     category: dev-qt-5
+    version: '>=0'
+  - name: glew
+    category: media-libs
     version: '>=0'
   - name: woff2
     category: media-libs
