dev-python/PyQt5: Bump v.5.15.9+1

--- a/packages/atoms/base-qt2/dev-python/PyQt5/definition.yaml
+++ b/packages/atoms/base-qt2/dev-python/PyQt5/definition.yaml
@@ -1,9 +1,8 @@
 name: PyQt5
-version: 5.15.9
+version: 5.15.9+1
 category: dev-python
 use_flags:
 - -help
-- -printsupport
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
@@ -21,6 +20,7 @@ use_flags:
 - network
 - opengl
 - positioning
+- printsupport
 - python_targets_python3_9
 - sql
 - svg
