sys-kernel/genkernel: Bump v.4.0.3+1

--- a/packages/atoms/tools/sys-kernel/genkernel/definition.yaml
+++ b/packages/atoms/tools/sys-kernel/genkernel/definition.yaml
@@ -1,10 +1,11 @@
 name: genkernel
-version: 4.0.3
+version: 4.0.3+1
 category: sys-kernel
 use_flags:
 - -selinux
 - btrfs
 - cryptsetup
+- -static
 requires:
 - name: pax-utils
   version: '>=0'
