kde-frameworks-5/kwallet: Bump v.5.98.0+1

--- a/packages/atoms/base-kde2/kde-frameworks-5/kwallet/build.yaml
+++ b/packages/atoms/base-kde2/kde-frameworks-5/kwallet/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+# Temporary until next race
+- >-
+  sed -i -e 's|cxx,qt5|cxx|g'
+  /var/git/meta-repo/kits/kde-kit/kde-frameworks/kwallet/kwallet-*.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
